manifests/apps/nayris/apps/client/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-client
  labels:
    app: nginx-client
    app.kubernetes.io/part-of: nayris
spec:
  ports:
    - name: port-8080
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    app: nginx-client
    deploymentconfig: nginx-client
